# PCL.Proto

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README-CN.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-only.yml  publish.yml
.trae/rules/: project_rules.md
scripts/: check-icons.js
src/: App.vue  AppLayout.vue  SubViewDic.ts  animateCSS.ts  main.ts  windowState.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  setup.rs
src-tauri/src/core/: api_client.rs  auth.rs  downloader.rs  game.rs  java.rs  launcher.rs  mcmod.rs  mod.rs  platform.rs  repository.rs  task_manager.rs
src-tauri/src/scaffolding/: commands.rs  discovery.rs  easytier.rs  mod.rs  protocol.rs
src-tauri/src/scaffolding/client/: mod.rs  states.rs
src-tauri/src/scaffolding/easytier/: exetuable.rs  mod.rs
src-tauri/src/scaffolding/mc/: mod.rs  scanning.rs
src-tauri/src/scaffolding/room/: member.rs  mod.rs
src-tauri/src/scaffolding/server/: mod.rs  request_handler.rs
src-tauri/src/scaffolding/terracotta/: mod.rs  player.rs  room.rs  states.rs
src-tauri/src/scaffolding/util/: byte_buffer.rs  mod.rs  room_code.rs
src-tauri/src/util/: byte_buffer.rs  crypto.rs  file.rs  mod.rs  scaffolding.rs  server_query.rs  skin.rs  toys.rs
src/api/: apiUrl.ts  doSomething.ts  gameVersions.ts  hello.ts  javaReq.ts  localApi.ts  modrinthApi.ts  skinGetter.ts  userAgent.ts  xamlParser.ts  xamlParser.tsx
src/assets/: base.css  main.css
src/components/: HelloWorld.vue  Modal.vue  SideGroup.vue  SideNavItem.vue  SideTip.vue  TitleMessage.vue  WindowHeader.vue
src/components/icons/control/: IconButtonSave.vue  IconInfo.vue  IconMore.vue  IconServer.vue  IconUnfold.vue
src/components/icons/header/: IconDownload.vue  IconLaunch.vue  IconLink.vue  IconSetup.vue  IconWrench.vue
src/components/icons/side/: IconFeedback.vue  IconFourLeaves.vue  IconHelp.vue  IconJava.vue  IconLobby.vue  (+10 more)
src/components/website/: SVGDrawer.vue  TitleMessage.vue
src/components/widget/: CardInfoItem.vue  Dropdown.vue  DropdownWithDescription.vue  FloatButton.vue  GameMemorySet.vue  MinecraftAvatar.vue  MinecraftServerCard.vue  ModifyCard.vue  MyButton.vue  MyCard.vue  MyLoading.vue  PButton.vue  PCard.vue  PCheckbox.vue  PCompItem.vue  PHint.vue  PInput.vue  PLoading.vue  PSearchBox.vue  SetupItem.vue  SideGroup.vue  SideNavItem.vue  SkinViewer.vue  TaskItem.vue
src/composables/: modalService.js  sideTip.ts  useFloatButton.ts  useModal.ts  useSideTip.ts
src/layout/: SideNavLayout.vue  navItems.ts
src/locales/: en-US.json  index.ts  zh-CN.json
src/options/: naviOptions.ts  sideDic.ts  subviewDic.ts
src/router/: index.ts  naviOptions.ts
src/stores/: account.ts  gameLaunch.ts  localStorage.ts  repositories.ts  scaffolding.ts  setup.ts  task.ts  terracotta.ts  windowState.ts
src/types/: easytier.ts  gameInfo.ts  gameInstance.ts  mcPing.ts  mcPlugin.ts  modal.ts  naviOptions.ts  sideTip.ts
src/util/: animateCSS.ts  cardDropAnimate.ts  gameInfo.ts  gameLaunch.ts  mcPing.ts  platform.ts  setup.ts  skinGetter.ts
src/views/: DownloadView.ts  DownloadView.vue  HomeNew.ts  HomeNew.vue  HomeSubView.vue  HomeView.vue  HomepageEditor.vue  LinkView.vue  MoreView.ts  MoreView.vue  SetupView.vue  VersionSelect.ts  VersionSetting.ts
src/views/Download/: Dowloading.vue  DownloadView.ts  GameDownload.tsx  GameDownload.vue  GameDownloadInner.vue  ManualDownload.vue  ModDownload.vue  PageComp.vue  ResouceVersions.vue  ResouceVersionsList.vue  ResourceVersions.vue  index.ts
src/views/DownloadSubView/: GameDownload.vue  ManualDownload.vue
src/views/DownloadSubViews/: GameDownload.vue
src/views/Home/: HomeNew.ts  HomeSubView.vue  HomeView.vue  index.vue
src/views/InstanceSelect/: InstanceNotFound.vue  InstanceSelect.tsx  InstanceSelectSubView.vue  index.tsx
src/views/InstanceSetting/: InstanceExport.vue  InstanceModify.vue  InstanceOverview.vue  InstanceSetting.ts  InstanceSettingSetting.vue  Overview.vue  OverviewCard.tsx  Saves.vue  index.ts
src/views/Link/: LinkHelp.vue  LinkLobby.vue  LinkView.ts  index.ts
src/views/More/: AboutAndThanks.vue  HomepageEditor.vue  MoreView.ts  WonderBox.tsx  index.ts
src/views/MoreSubViews/: AboutAndThanks.vue
src/views/Setup/: AboutAndThanks.vue  JavaSetup.vue  LaunchSetup.vue  Personalization.vue  SetupView.ts  index.ts
src/views/SetupSubView/: JavaManage.vue
src/views/SetupSubViews/: JavaSetup.vue  LaunchSetup.vue
src/views/Tools/: HomepageEditor.vue  LinkLobby.vue  LinkLobbyInner.vue  WonderBox.tsx  index.ts
