[workspace]
resolver = "3"
members = [
    "src-tauri",
    "src-terracotta",
    "src-terracotta/timestamp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = "1"
serde_json = "1"
chrono = "0.4.43"
regex = "1.12.2"
tokio = "1"
reqwest = "0.13.1"
toml = "0"
uuid = "1"
lazy_static = "1.5.0"

# 构建配置
[profile.dev]
incremental = true
opt-level = 0
debug = true
panic = "abort"

[profile.dev-fast]
inherits = "dev"
debug = false
strip = "debuginfo"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false

[profile.release.package."*"]
opt-level = "z"
strip = true
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release-fast]
inherits = "release"
codegen-units = 64

[profile.release-fast.package."*"]
inherits = "release"
codegen-units = 64