[package]
name = "pcl-proto"
version = "0.5.1"
description = "PCL.Proto"
authors = ["AMagicPear"]
license = "PCL-License"
repository = "https://github.com/PCL-Community/PCL.Proto"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-os = "2"
chrono = "0.4.41"
tauri-plugin-dialog = "2"
regex = "1.11.2"
tokio = { version = "1", features = ["rt", "macros"] }
goblin = "0.10"
directories = "6.0.0"
