[package]
name = "pcl-proto"
version = "0.6.5"
description = "PCL.Proto"
authors = ["AMagicPear"]
license = "PCL-License"
repository = "https://github.com/PCL-Community/PCL.Proto"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pcl_proto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-os = "2"
chrono = "0.4.42"
tauri-plugin-dialog = "2"
regex = "1.12.2"
tokio = { version = "1", features = ["rt", "macros"] }
goblin = "0.10"
directories = "6.0.0"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
thiserror = "2.0.17"
futures-util = "0.3.31"
serde_repr = "0.1.20"
sha1 = "0.10.6"
quick-xml = { version = "0.38.3", features = ["serialize"] }
anyhow = "1.0.100"
# tauri-invoke-http = "0.1.0"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
