[package]
name = "pcl-proto"
version = "0.7.0"
description = "PCL.Proto"
authors = ["AMagicPear"]
license = "PCL-License"
repository = "https://github.com/PCL-Community/PCL.Proto"
edition = "2024"
resolver = "3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pcl_proto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
reqwest = { version = "0.13.1", features = ["blocking"] }
zip = "0.6.6"

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = "0"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-os = "2.3.2"
chrono = { workspace = true }
tauri-plugin-dialog = "2.6.0"
regex = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
goblin = "0.10"
directories = "6.0.0"
reqwest = { workspace = true, features = ["json", "stream"] }
thiserror = "2.0.18"
futures-util = "0.3.31"
serde_repr = "0.1.20"
sha1 = "0.10.6"
quick-xml = { version = "0.39.0", features = ["serialize"] }
anyhow = "1.0"
terracotta = { path = "../src-terracotta", version = "2.5.0-pcl.proto" }
dashmap = "6.1.0"
uuid = { workspace = true }
trust-dns-resolver = "0.23.2"
base64 = "0.22.1"
# tauri-invoke-http = "0.1.0"


